--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "formidable": "^1.2.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.17.1",
     "uuid": "^3.3.3"
   },
