--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "formidable": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "uuid": "^3.3.3"
   },
